--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
         "almasaeed2010/adminlte": "~3.2",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.8",
+        "laravel/cashier": "^14.9",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "spatie/laravel-permission": "^5.10",
+        "stripe/stripe-php": "^10.12",
         "yajra/laravel-datatables-oracle": "^10.0"
     },
     "require-dev": {
