--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "almasaeed2010/adminlte": "~3.2",
+        "cybercog/laravel-ban": "^4.8",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.8",
         "laravel/cashier": "^14.9",
