--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "laravel/ui": "^4.2",
         "spatie/laravel-permission": "^5.10",
         "stripe/stripe-php": "^10.12",
-        "yajra/laravel-datatables-oracle": "^10.0",
-        "webpatser/laravel-countries": "dev-master"
+        "webpatser/laravel-countries": "^1.5",
+        "yajra/laravel-datatables-oracle": "^10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
